Fix: thanks button and animation on tablet

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -675,6 +675,11 @@
       &:hover, &:focus
         background-color: $dark
         color: $light
+  .button
+    &__thanks
+      &:hover, &:focus
+        background-color: $dark
+        color: $light
       
   
     
